include request sequence in thread group
